# fenx-spec-dictionary

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
data/dictionary/: endpoints.csv  parameters.csv  responses.csv  schema_properties.csv  schemas.csv
data/dictionary/documentmanagementcommand_v1/: endpoints.csv  parameters.csv  responses.csv  schema_properties.csv  schemas.csv
data/dictionary/documentmanagementcommand_v2/: endpoints.csv  parameters.csv  responses.csv  schema_properties.csv  schemas.csv
data/dictionary/documentmanagementquery_v1/: endpoints.csv  parameters.csv  responses.csv  schema_properties.csv  schemas.csv
data/dictionary/journeycommand_v1/: endpoints.csv  parameters.csv  responses.csv  schemas.csv  (+1 more)
data/raw/: documentmanagementcommand_v1.swagger.json  documentmanagementcommand_v2.swagger.json  documentmanagementquery_v1.swagger.json  journeycommand_v1.swagger.json  journeyquery_v1.swagger.json  lookupcommand_v1.swagger.json  lookupquery_v1.swagger.json  policycommand_v1.swagger.json  policyquery.swagger.json  policyquery_v2.swagger.json  productpolicycommand_v1.swagger.json  productpolicyquery_v1.swagger.json  riskcommand_v1.swagger.json  riskquery_v1.swagger.json
examples/: sample_fenx_spec.yaml
scripts/: build_dictionary.py  compare_specs.py  fetch_spec.py
src/fenx_spec_dictionary/: __init__.py  cli.py  dictionary.py  exporter.py  extractor.py  loader.py  parser.py  pipeline.py  refs.py  spec_catalog.py
tests/: test_dictionary.py  test_exporter.py  test_extractor.py  test_parser.py  test_pipeline.py  test_refs.py
(+45 files in other folders)
