[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenx-spec-dictionary"
version = "0.1.0"
description = "Builds CSV dictionaries from Fenergo OpenAPI/Swagger specs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
